// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectUsers /> should hide the menu gear for the active user 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<h2
    className="emotion-0"
  >
    Project User Admin
  </h2>,
  .emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  justify-self: flex-start;
  color: #000000;
  font-weight: 500;
  background-color: #ffffff;
  border: 1px solid #4ac565;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
}

.emotion-0 {
  width: 40px;
  height: 40px;
  color: #ffffff;
  background-color: #4ac565;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 16px;
  padding-right: 16px;
}

<div
    className="emotion-3"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-0"
      >
        <svg
          data-file-name="checkmark.svg"
          width={20}
        />
      </div>
      <div
        className="emotion-1"
      >
        User Permissions Saved
      </div>
    </div>
  </div>,
  .emotion-5 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-4 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-0 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

<nav
    className="emotion-5"
  >
    <ul
      className="emotion-4"
    >
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View All
        </a>
      </li>
      <li
        className="emotion-1"
      >
        <a
          className="emotion-2"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Add User(s)
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-0 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-0:nth-of-type(2) {
  width: 100%;
}

.emotion-0:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 {
  height: auto;
}

.emotion-6 {
  width: 100%;
  height: auto;
  border-spacing: 0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  white-space: nowrap;
}

.emotion-6 tr {
  background-color: #252525;
}

.emotion-6 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-6 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-6 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-6 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-6 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-6 td {
  max-width: calc(100vw / 2);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-6 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-6 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-4 {
  display: inline-block;
  color: #191919;
  background-color: #b3b3b3;
  padding: 12px;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 8px;
  border-radius: 14px;
  font-family: Roboto Condensed;
}

<div
    className="emotion-7"
  >
    <table
      className="emotion-6"
    >
      <thead>
        <tr>
          <th
            className="emotion-0"
          >
            Email
          </th>
          <th
            className="emotion-0"
          >
            Permissions
          </th>
          <th
            className="emotion-0"
          >
            <div
              className="emotion-2"
            >
              <svg
                data-file-name="gear.svg"
                width={20}
              />
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            jane@zorroa.com
          </td>
          <td>
            <span
              className="emotion-4"
            >
               Api Key Manage
            </span>
            <span
              className="emotion-4"
            >
               Project Manage
            </span>
          </td>
          <td />
        </tr>
      </tbody>
    </table>
    <div>
       
    </div>
    <div>
       
    </div>
  </div>,
]
`;

exports[`<ProjectUsers /> should render properly with no project users 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<h2
    className="emotion-0"
  >
    Project User Admin
  </h2>,
  .emotion-5 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-4 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-0 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

<nav
    className="emotion-5"
  >
    <ul
      className="emotion-4"
    >
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View All
        </a>
      </li>
      <li
        className="emotion-1"
      >
        <a
          className="emotion-2"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Add User(s)
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-7 {
  height: 100%;
}

.emotion-6 {
  width: 100%;
  height: 100%;
  border-spacing: 0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  white-space: nowrap;
}

.emotion-6 tr {
  background-color: #252525;
}

.emotion-6 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-6 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-6 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-6 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-6 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-6 td {
  max-width: calc(100vw / 2);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-6 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-6 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-0 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-0:nth-of-type(2) {
  width: 100%;
}

.emotion-0:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  height: 100%;
  pointer-events: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  font-size: 15px;
  line-height: 19px;
}

<div
    className="emotion-7"
  >
    <table
      className="emotion-6"
    >
      <thead>
        <tr>
          <th
            className="emotion-0"
          >
            Email
          </th>
          <th
            className="emotion-0"
          >
            Permissions
          </th>
          <th
            className="emotion-0"
          >
            <div
              className="emotion-2"
            >
              <svg
                data-file-name="gear.svg"
                width={20}
              />
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="emotion-5"
        >
          <td
            colSpan={3}
          >
            <div
              className="emotion-4"
            >
              No users
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <div>
       
    </div>
    <div>
       
    </div>
  </div>,
]
`;

exports[`<ProjectUsers /> should render properly with project users 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<h2
    className="emotion-0"
  >
    Project User Admin
  </h2>,
  .emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  justify-self: flex-start;
  color: #000000;
  font-weight: 500;
  background-color: #ffffff;
  border: 1px solid #4ac565;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
}

.emotion-0 {
  width: 40px;
  height: 40px;
  color: #ffffff;
  background-color: #4ac565;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 16px;
  padding-right: 16px;
}

<div
    className="emotion-3"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-0"
      >
        <svg
          data-file-name="checkmark.svg"
          width={20}
        />
      </div>
      <div
        className="emotion-1"
      >
        User Permissions Saved
      </div>
    </div>
  </div>,
  .emotion-5 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-4 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-0 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

<nav
    className="emotion-5"
  >
    <ul
      className="emotion-4"
    >
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View All
        </a>
      </li>
      <li
        className="emotion-1"
      >
        <a
          className="emotion-2"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Add User(s)
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-0 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-0:nth-of-type(2) {
  width: 100%;
}

.emotion-0:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-9 {
  height: auto;
}

.emotion-8 {
  width: 100%;
  height: auto;
  border-spacing: 0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  white-space: nowrap;
}

.emotion-8 tr {
  background-color: #252525;
}

.emotion-8 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-8 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-8 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-8 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-8 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-8 td {
  max-width: calc(100vw / 2);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-8 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-8 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-4 {
  display: inline-block;
  color: #191919;
  background-color: #b3b3b3;
  padding: 12px;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 8px;
  border-radius: 14px;
  font-family: Roboto Condensed;
}

.emotion-7 {
  position: relative;
}

.emotion-6 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  color: #191919;
  padding: 6px;
  margin: -6px;
  border-radius: 32px;
}

.emotion-6:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-6:hover {
  background-color: #808080;
}

<div
    className="emotion-9"
  >
    <table
      className="emotion-8"
    >
      <thead>
        <tr>
          <th
            className="emotion-0"
          >
            Email
          </th>
          <th
            className="emotion-0"
          >
            Permissions
          </th>
          <th
            className="emotion-0"
          >
            <div
              className="emotion-2"
            >
              <svg
                data-file-name="gear.svg"
                width={20}
              />
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            jane@zorroa.com
          </td>
          <td>
            <span
              className="emotion-4"
            >
               Api Key Manage
            </span>
            <span
              className="emotion-4"
            >
               Project Manage
            </span>
          </td>
          <td>
            <div
              className="emotion-7"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="emotion-6"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <div>
       
    </div>
    <div>
       
    </div>
  </div>,
]
`;
